# MNIST_encoder

./: CMakeLists.txt  README.md
examples/MNIST-encoder/: encoder-test.cpp  encoder-train.cpp
examples/MNIST-image-recognition/: mnist.cpp  mnist_test.cpp
matrix/: matrix.h
